# ADMESH

./: .domi-pin  .gitattributes  .gitignore  .importlinter  .release-ignore.toml  .zenodoignore  404.html  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONSTITUTION.md  CONTEXT.md  CONTRIBUTING.md  HOOKS-AUDIT.md  MANIFEST.in  PROJECT_PLAN.md  README.md  SECURITY.md  TEST-AUDIT.md  TESTING.md  facts.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  sitemap.xml
.claude/: CLAUDE.md  CLAUDE.md.incoming  claude_routine_instructions.md  settings.json
.claude/handoffs/: 2026-05-25-wnat-version-benchmark.md  2026-05-29-octree-size-field.md  2026-06-02-octree-perf-rewrite.md
.github/: labels.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  port_implementation.yml  research_prompt.yml
.github/workflows/: LOCAL.md  build-wheels.yml  cleanup-branches.yml  cleanup-deployments.yml  closure-audit.yml  docs.yml  introspect-monthly-review.yml  publish-hf.yml  publish.yml  sync-labels.yml  tests-slow.yml  tests.yml  validate-pr.yml  viz-interop.yml  weekday-attention-digest.yml
.planning/: config.json
.specify/: ANALYZE.md  CLARIFY.md  DECISION_MEMO.md  IMPLEMENT.md  INDEX.md  PLAN.md  RECOMMENDATION.md  SPECIFY.md  TASKS.md  feature.json
ADMESH_DOMAINS_CONTRACT/: index.html
BENCHMARK_DELIVERABLE/: index.html
CONTACT_LOG/: index.html
DOMAIN_IO/: index.html
HOOKS-AUDIT/: index.html
PFIX_CONTRACT/: index.html
PORTING_NOTES/: index.html
PUBLISH_RELEASE/: index.html
PYPI_CLAIM_TASKS/: index.html
SCRIPT_AUDIT/: index.html
admesh/: __init__.py  _fast_sdf.py  api.py  bathymetry.py  boundary.py  boundary_types.py  curvature.py  distance.py  distmesh.py  domains.py  dominate_tide.py  fort14.py  in_polygon.py  inpaint.py  loaders.py  medial_axis.py  mesh_size.py  quad_intent.py  quad_metrics.py  quad_prep.py  quality.py  registry.py  routine.py  valence.py  viz.py
admesh-cpp/: .gitignore  chilmesh.cpp
admesh-cpp/tests/: CMakeLists.txt  test_mesh_mvp.cpp  test_wnat_timing.cpp
admesh-rs/: BENCHMARKS.md  Cargo.toml  PIPELINE-BENCHMARKS.md  README.md  bench-pipeline-results.csv  bench-results.csv
admesh-rs/crates/admesh-core/benches/: distmesh_bench.rs
admesh-rs/crates/admesh-core/src/: delaunay.rs  lib.rs  quality.rs  sdf.rs  stages.rs
admesh-rs/scripts/: bench_native_sdf.py  bench_pipeline.py  bench_vs_python.py
admesh/_cpp/: CMakeLists.txt  __init__.py  distmesh_cpp.cpp  distmesh_module.cpp  pipeline.cpp
benchmarks/: CAVEMAN.md  DESIGN.md  README.md  _bench_worker.py  bench_current.py  bench_enpac.py  bench_real.py  bench_wnat.py  benchmark_cpp_column.py  compare_versions.py  cpp_benchmark_v1.0.0.json  final_benchmark.py  measure_cpp_baseline.py
contributing/: index.html
demo/: index.html
docs/: ADMESH_DOMAINS_CONTRACT.md  BENCHMARK_DELIVERABLE.md  CNAME  CONTACT_LOG.md  DOMAIN_IO.md  HOOKS-AUDIT.md  PFIX_CONTRACT.md  PORTING_NOTES.md  PUBLISH_RELEASE.md  PYPI_CLAIM_TASKS.md  SCRIPT_AUDIT.md  contributing.md  index.md  persistence_journal.md  quickstart.md  session_0_report.md  session_0_state.md  session_1_plan.md  session_1_state.md  session_2_plan.md  session_2_report.md  session_2_state.md  session_3_plan.md  session_3_report.md  session_4_plan.md  session_5_plan.md  session_5_report.md  session_6_plan.md  session_6_report.md  session_6_state.md  testing.md  wiki-ADCIRC-Mesh-Registry.md
mesh_registry/: __init__.py  cli.py  manifest.py  publisher.py  query.py  schema.py
output/: coverage.json  durations.txt
persistence_journal/: index.html
quickstart/: index.html
registry_data/: manifest.toml
scripts/: bench_medial_axis.py  bench_mesh_size.py  bench_octree_enpac.py  bench_octree_quality.py  bench_pipeline.py  chilmesh_roundtrip_demo.py  diagnose_wnat_bermuda.py  export_matlab_fixtures.m  extract_boundary_only_fort14.py  gen_baranja_viz_data.py  gen_demo_frames.py  gen_notch_seamount_data.py  github_release.py  instructions.sh  instructions_on_start.sh  make_report_pdf.py  make_wnat_benchmark.py  manim_admesh_baranja.py  manim_notch_seamount.py  mat_to_npz.py  pre_tag_check.sh  publish_release.py  pypi_publish.py  quad_eval.py  render_annulus_animation.py  render_mvp_meshes.py  render_notched_boundary_curvature.py  render_octree_meshcompare.py  render_octree_proof.py  render_p1p3_demos.py  render_quickstart_notched.py  render_release_gate.py  render_scalability.py  render_sizefield_diff.py  render_wnat_bermuda_inspect.py  render_wnat_from_mesh_fix.py  render_wnat_octree.py  render_wnat_octree_vs_uniform_mesh.py  run_block_o_demo.py  size_field_extension_demo.py  (+2 more)
search/: search_index.json
specs/: CONSTITUTION-FRAMEWORK.md
src/cpp/: CMakeLists.txt  distmesh  distmesh.cpp
src/cpp/src/io/: fort14.cpp
src/cpp/src/stages/: quality.cpp
src/rust/crates/admesh-core/: Cargo.toml
src/rust/crates/admesh-core/src/: distmesh.rs  lib.rs  size_field.rs
src/rust/crates/admesh-py/: Cargo.toml
src/rust/crates/admesh-py/src/: lib.rs
testing/: index.html
tests/: _structural_validity.py  conftest.py  instructions_on_start_smoke.sh  test_admesh_domains_contract.py  test_api_dataclass_shapes.py  test_api_domain_builders.py  test_api_equals.py  test_api_mesh.py  test_api_repr.py  test_api_triangulate.py  test_api_triangulate_user_contribs.py  test_background_grid.py  test_backward_compat.py  test_backward_compat_full_suite.py  test_bathymetry.py  test_bench_quality_gate.py  test_boundary.py  test_boundary_types.py  test_curvature.py  test_default_size_field.py  test_distance.py  test_distmesh.py  test_distmesh_admesh.py  test_docstring_completeness.py  test_domains.py  test_dominate_tide.py  test_fort14_chilmesh_compat.py  test_fort14_chilmesh_smoke.py  test_fort14_index_and_sign_conventions.py  test_fort14_paired.py  test_fort14_reader_errors.py  test_fort14_reference_corpus.py  test_fort14_roundtrip.py  test_gmsh.py  test_imports.py  test_in_polygon.py  test_inpaint.py  test_issue_11_ring_sorting.py  test_loaders.py  test_matlab_port.py  (+25 more)
wiki/: index.html
(+412 files in other folders)
