[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "admesh"
version = "0.0.1"
description = "Python port of the ADMESH library for 2D unstructured mesh generation."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
    { name = "Dominik Mattioli" },
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.11",
    "numba>=0.58",
    "shapely>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-cov",
    "ruff",
    "mypy",
]

[project.urls]
Source = "https://github.com/domattioli/ADMESH"
"MATLAB reference" = "https://github.com/domattioli/QuADMesh-MATLAB"

[tool.setuptools.packages.find]
include = ["admesh*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py310"
