[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "admesh2D"
version = "0.1.0"
description = "ADMESH: an advanced, automatic unstructured mesh generator for 2D shallow-water models."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
    { name = "Colton J. Conroy" },
    { name = "Ethan J. Kubatko" },
    { name = "Dustin W. West" },
]
maintainers = [
    { name = "Dominik Mattioli" },
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.11",
    "numba>=0.58",
    "shapely>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-cov",
    "ruff",
    "mypy",
]
viz = [
    "matplotlib>=3.7",
]

[project.urls]
Source = "https://github.com/domattioli/ADMESH"
Paper = "https://doi.org/10.1007/s10236-012-0574-0"

[tool.setuptools.packages.find]
include = ["admesh*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py310"
