[build-system]
requires = ["setuptools>=68", "wheel", "pybind11>=2.6.0"]
build-backend = "setuptools.build_meta"

[project]
name = "admesh2D"
version = "0.5.0"
description = "ADMESH: an advanced, automatic unstructured mesh generator for 2D shallow-water models."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    { name = "Colton J. Conroy" },
    { name = "Ethan J. Kubatko" },
    { name = "Dustin W. West" },
]
maintainers = [
    { name = "Dominik Mattioli" },
]
dependencies = [
    "admesh-domains>=0.3.0,<0.4",
    "numpy>=1.24",
    "scipy>=1.11",
    "numba>=0.58",
    "shapely>=2.0",
    "tomli>=1.1.0;python_version<'3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-cov",
    "ruff",
    "mypy",
    "mkdocs-material>=9",
    "mkdocstrings[python]>=0.24",
]
viz = [
    "chilmesh>=1.1,<2",
]
registry = [
    "huggingface_hub>=0.20",
]

[project.urls]
Source = "https://github.com/domattioli/ADMESH"
Paper = "https://doi.org/10.1007/s10236-012-0574-0"
"Mesh Registry" = "https://github.com/domattioli/ADMESH-Domains"

[tool.setuptools.packages.find]
where = ["src"]
include = ["admesh*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -m 'not slow'"
markers = [
    "slow: tests requiring real coastal fixtures (>=1 MB) or long wall-clock; deselect with -m 'not slow'",
]

[tool.ruff]
line-length = 100
target-version = "py310"
