[package]
name = "admesh-py"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Python bindings for admesh-core via pyo3 + numpy."

[lib]
name = "admesh_rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
admesh-core = { path = "../admesh-core" }
pyo3 = { version = "0.22", features = ["extension-module", "abi3-py39"] }
numpy = "0.22"
ndarray.workspace = true
